# object_detection

./: CMakeLists.txt  buf  main.cpp  realsense.cpp  realsense.hpp
test/: object_detect_by_color.cpp
